force-app/main/default/objects/QTB_WorkOrderTiers__c/QTB_WorkOrderTiers__c.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-1025 - storing work order tiers for work order type products</description>
    <label>Work Order Tiers</label>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order Tiers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>