force-app/main/default/objects/QTB_WorkOrderTiers__c/fields/QTB_First_Tier_Breakpoint__c.field-meta.xml
<CustomField>
    <fullName>QTB_First_Tier_Breakpoint__c</fullName>
    <description>#SFCPQBLG-1025</description>
    <label>First Tier Breakpoint</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>