force-app/main/default/objects/QTB_WorkOrderTiers__c/fields/QTB_Second_Tier_Price__c.field-meta.xml
<CustomField>
    <fullName>QTB_Second_Tier_Price__c</fullName>
    <description>#SFCPQBLG-1025</description>
    <label>Second Tier Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>